# Sigmos

./: .gitignore  Cargo.toml  INTEGRATION_QUICK_START.md  LIBRARY_USAGE.md  README.md  SIGMANTA.md  contributor_help.bat  master.sigel  notes.txt  osc2.sig  quick_start.bat  sigmos.toml  spanish-english-3.txt  test_compressed.sig  test_gpu.sig  test_uncompressed.sig  train_examples.bat  wildcat.sig
examples/: example_usage.md  quick_start.bat  quick_start.sh
examples/sigmos-integration-example/: Cargo.toml
examples/sigmos-integration-example/src/: main.rs
output-sigs/: README.md
output-sigs/compressed/: .gitkeep
output-sigs/experimental/: .gitkeep
output-sigs/trained/: .gitkeep
src/: advanced_learning.rs  ai_api.rs  ai_communication.rs  collective_intelligence.rs  compression.rs  consciousness.rs  cosmos.rs  dream_mode.rs  enhanced_consciousness.rs  gpu_acceleration.rs  interaction.rs  learning.rs  lib.rs  mathtables_integration.rs  memory_consolidation.rs  numerical_stability.rs  quantum_consciousness.rs  server.rs  sigel.rs  sigmanta.rs  sigmos_api.rs  simple_api.rs  web_interface.rs
testtext/: test1.txt  test2.txt
